--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,9 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter'
 
+	// 자바 표준 Provider 라이브러리 추가
+	implementation 'javax.inject:javax.inject:1'
+
 	//lombok 라이브러리 추가 시작
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
