--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,9 @@ dependencies {
 	// 자바 표준 Provider 라이브러리 추가
 	implementation 'javax.inject:javax.inject:1'
 
+	// web 라이브러리 추가
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+
 	//lombok 라이브러리 추가 시작
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
